* 2014-10-01 - thorben.betten@open-xchange.com

 - Fix for bug 34710: Pass host name from HostnameService to template

* 2014-09-30 - steffen.templin@open-xchange.com

 - Fix for bug 34628: Distribution lists are not returned as auto-complete results in mail search anymore.

* 2014-09-30 - thorben.betten@open-xchange.com

 - Fix for bug 34676: Reviewed caching behavior and settings. Optimized to avoid superfluous querying of database service

* 2014-09-29 - thorben.betten@open-xchange.com

 - Fix for bug 34668: Special handling for Windows IE 11 Browser in session management
 - Fix for bug 34664: Removed connection from volatile cache if a severe SQL error occurred

* 2014-09-28 - thorben.betten@open-xchange.com

 - Fix for bug 34617: Signal proper write permission in case "ENABLE_INTERNAL_USER_EDIT" is set to "false"
 - Fix for bug 34656: Use proper cache region name to not silently fall-back to default one

* 2014-09-26 - jan.bauerdick@open-xchange.com

 - Fix for bug 34652: Invalidate context cache when moving filestore

* 2014-09-26 - thorben.betten@open-xchange.com

 - Fix for bug 34465: Fixed update for POP3 mail accounts

* 2014-09-25 - thorben.betten@open-xchange.com

 - Fix for bug 34623: Pass null references for user/password arguments in case SMTP authentication is explicitly disabled
 - Fix for bug 34633: Added "UserPermissionBits" cache region to cache configuration to orderly align to cache usage and to disable lateral
                      distribution of its cache elements

* 2014-09-25 - jan.bauerdick@open-xchange.com

 - Fix for bug 34622: Added missing userId-check in ContextSetConfigProvider

* 2014-09-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 34592: Check for potential client-side changes in the subdirectory tree before instructing to remove a directory

* 2014-09-24 - tobias.friedrich@open-xchange.com
